--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
           color: white;
           font-weight: 700px;
           text-align: center;
+          /* Example Text */
 }
 
 /***********************
