--- a/style.css
+++ b/style.css
@@ -123,3 +123,24 @@ FORM ASSETS
           padding: 5px;
           margin: 1rem auto;
 }
+
+/***********************
+
+TRANSACTION LIST
+
+***********************/
+
+.transactions {
+    border: 0;
+    border-radius: 10px;
+    margin: 0 auto;
+    list-style: none;
+    background: white;
+    padding: 15px;
+    max-width: 600px;
+}
+
+.transactions li {
+    padding: 5px;
+    font-size: 18px;
+}
