--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 
 html {
-    background-color: #0093E9;
+    background-color: #80D0C7;
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);   
-    height: 100%; 
+    height: 200%; 
     font-family: 'Rubik', sans-serif;
 }
 
