--- a/style.css
+++ b/style.css
@@ -149,3 +149,14 @@ TRANSACTION LIST
 .padded-stored-items {
     padding: 5px;
 }
+
+/* TRANSACTION CHART */
+
+.main-transaction-class {
+    background-color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 4rem auto;
+    max-width: 600px;
+}
