--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 
 html {
-    background-color: #80D0C7;
-    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);   
-    height: 200%; 
-    font-family: 'Rubik', sans-serif;
+  background-color: #80d0c7;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+  height: 200%;
+  font-family: "Rubik", sans-serif;
 }
 
 .title {
-          color: white;
-          font-weight: 700px;
-          text-align: center;
+  color: white;
+  font-weight: 700px;
+  text-align: center;
 }
 
 /***********************
@@ -19,16 +19,17 @@ BALANCE
 
 ***********************/
 
-.balanceTitle, #main-balance {
-          text-align: center;
-          color: white;
-          margin: 0 auto;
+.balanceTitle,
+#main-balance {
+  text-align: center;
+  color: white;
+  margin: 0 auto;
 }
 
 #main-balance {
-          text-align: center;
-          color: white;
-          font-size: 60px;
+  text-align: center;
+  color: white;
+  font-size: 60px;
 }
 
 /***********************
@@ -37,52 +38,56 @@ INCOME/OUTCOME FORMS
 
 ***********************/
 
-
 /* In case we want to close one form */
 .closeForm {
-          display: none;
+  display: none;
 }
 
-.showIncomeOutcome { /* Show the toggled form */
-          display: block;
-          max-width: 600px;
-          background-color: white;
-          border-radius: 10px;
-          margin: 2rem auto;
-          padding: 15px;
+.showIncomeOutcome {
+  /* Show the toggled form */
+  display: block;
+  max-width: 600px;
+  background-color: white;
+  border-radius: 10px;
+  margin: 2rem auto;
+  padding: 15px;
 }
 
-.containerIncome, .containerOutcome {           
-                  display: none; /* By default the forms are hidden */
+.containerIncome,
+.containerOutcome {
+  display: none; /* By default the forms are hidden */
 }
 
 .switch {
-          display: flex;
-          -webkit-box-pack: center; -moz-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center;
-          margin: 4rem auto;
-          border: 0;
-          height: 50px;
-          border-radius: 10px;
-          background: #E8E5E0;
-          max-width: 400px;
-          align-items: center;
-          font-size: 18px;
-          padding: 10px;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 4rem auto;
+  border: 0;
+  height: 50px;
+  border-radius: 10px;
+  background: #e8e5e0;
+  max-width: 400px;
+  align-items: center;
+  font-size: 18px;
+  padding: 10px;
 }
 
-input[type='checkbox'] {
--webkit-appearance:none;
-    width:30px;
-    height:30px;
-    background:white;
-    border-radius:5px;
-    border:2px solid #555;
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  width: 30px;
+  height: 30px;
+  background: white;
+  border-radius: 5px;
+  border: 2px solid #555;
 }
 
-input[type='checkbox']:checked {
-          background: orange;
+input[type="checkbox"]:checked {
+  background: orange;
 }
-
 
 /***********************
 
@@ -91,37 +96,38 @@ FORM ASSETS
 ***********************/
 
 #formLabel {
-          text-align: center;
-          padding: 5px;
-          font-size: 23px;
-          font-weight: 700;
+  text-align: center;
+  padding: 5px;
+  font-size: 23px;
+  font-weight: 700;
 }
 
 .incomeForm {
-          display: flex;
-          flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .textareaForm {
-          width: 200px;
-          height: 40px;
-          border: 2px solid #E8E5E0;
-          border-radius: 10px;
-          padding: 5px;
-          margin: 0 auto;
-          font-size:20px;
-          text-align: center;
+  width: 200px;
+  height: 40px;
+  border: 2px solid #e8e5e0;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 0 auto;
+  font-size: 20px;
+  text-align: center;
 }
 
-.submitIncome, .submitOutcome {
-          width: 200px;
-          border: 2px solid black;
-          border-radius: 10px;
-          background: white;
-          color: black;
-          font-weight: 700;
-          padding: 5px;
-          margin: 1rem auto;
+.submitIncome,
+.submitOutcome {
+  width: 200px;
+  border: 2px solid black;
+  border-radius: 10px;
+  background: white;
+  color: black;
+  font-weight: 700;
+  padding: 5px;
+  margin: 1rem auto;
 }
 
 /***********************
@@ -131,32 +137,42 @@ TRANSACTION LIST
 ***********************/
 
 .transactions {
-    border: 0;
-    border-radius: 10px;
-    margin: 0 auto;
-    list-style: none;
-    background: white;
-    padding: 15px;
-    max-width: 600px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border: 0;
+  border-radius: 10px;
+  margin: 0 auto;
+  list-style: none;
+  background: white;
+  padding: 15px;
+  max-width: 600px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .transactions li {
-    padding: 5px;
-    font-size: 18px;
+  padding: 5px;
+  font-size: 18px;
 }
 
 .padded-stored-items {
-    padding: 5px;
+  padding: 5px;
 }
 
-/* TRANSACTION CHART */
+/***********************
 
-.main-transaction-class {
-    background-color: white;
-    border: none;
-    border-radius: 10px;
-    padding: 10px;
-    margin: 4rem auto;
-    max-width: 600px;
+PAGE LOADER
+
+***********************/
+
+#page-loader {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10000;
+  display: none;
+  text-align: center;
+  width: 100%;
+  padding-top: 25px;
+  background-color: rgba(0, 0, 0, 0.7);
+  height: 300%;
 }
