--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 
 html {
-  background-color: #86B2BF;
   /*background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);*/
-  height: 200%;
+  background-color: #FFB1A4;
   font-family: "Rubik", sans-serif;
 }
 
@@ -27,6 +26,32 @@ html {
 		opacity: 1;
 		transform: translate3d(0, 0, 0);
 	}
+}
+
+/***********************
+
+BLOB ANIMATION
+
+***********************/
+.blob {
+  position: absolute;
+  top: 0;
+  left: 0;
+  fill: #023F92;
+  width: 50vmax;
+  z-index: -1;
+  animation: none;
+  transform-origin: 50% 50%;
+  margin: 0 -10%;
+}
+
+@keyframes move {
+  0%   { transform: scale(1)   translate(10px, -30px); }
+  38%  { transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+  40%  { transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+  78%  { transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
+  80%  { transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
+  100% { transform: scale(1)   translate(10px, -30px); }
 }
 
 /***********************
@@ -67,6 +92,7 @@ INCOME/OUTCOME FORMS
   border-radius: 10px;
   margin: 2rem auto;
   padding: 15px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .containerIncome,
@@ -90,6 +116,12 @@ INCOME/OUTCOME FORMS
   align-items: center;
   font-size: 18px;
   padding: 10px;
+  background: rgba( 255, 255, 255, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4px );
+-webkit-backdrop-filter: blur( 4px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 input[type="checkbox"] {
@@ -161,6 +193,12 @@ TRANSACTION LIST
   padding: 15px;
   max-width: 600px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background: rgba( 255, 255, 255, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4px );
+-webkit-backdrop-filter: blur( 4px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .transactions li {
