--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 html {
   /*background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);*/
-  background-color: #FFB1A4;
+  background-color: #ffb1a4;
   font-family: "Rubik", sans-serif;
 }
 
@@ -18,14 +18,14 @@ html {
 }
 
 @keyframes fadeIn {
-	from {
-		opacity: 0;
-		transform: translate3d(0, -20%, 0);
-	}
-	to {
-		opacity: 1;
-		transform: translate3d(0, 0, 0);
-	}
+  from {
+    opacity: 0;
+    transform: translate3d(0, -20%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 /***********************
@@ -37,7 +37,7 @@ BLOB ANIMATION
   position: absolute;
   top: 0;
   left: 0;
-  fill: #023F92;
+  fill: #023f92;
   width: 50vmax;
   z-index: -1;
   animation: none;
@@ -46,12 +46,24 @@ BLOB ANIMATION
 }
 
 @keyframes move {
-  0%   { transform: scale(1)   translate(10px, -30px); }
-  38%  { transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
-  40%  { transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
-  78%  { transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
-  80%  { transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
-  100% { transform: scale(1)   translate(10px, -30px); }
+  0% {
+    transform: scale(1) translate(10px, -30px);
+  }
+  38% {
+    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+  }
+  40% {
+    transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
+  }
+  78% {
+    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+  }
+  80% {
+    transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
+  }
+  100% {
+    transform: scale(1) translate(10px, -30px);
+  }
 }
 
 /***********************
@@ -116,12 +128,12 @@ INCOME/OUTCOME FORMS
   align-items: center;
   font-size: 18px;
   padding: 10px;
-  background: rgba( 255, 255, 255, 0.25 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 4px );
--webkit-backdrop-filter: blur( 4px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 input[type="checkbox"] {
@@ -185,6 +197,7 @@ TRANSACTION LIST
 ***********************/
 
 .transactions {
+  color: white;
   border: 0;
   border-radius: 10px;
   margin: 0 auto;
@@ -193,12 +206,12 @@ TRANSACTION LIST
   padding: 15px;
   max-width: 600px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  background: rgba( 255, 255, 255, 0.25 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 4px );
--webkit-backdrop-filter: blur( 4px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .transactions li {
@@ -231,8 +244,7 @@ PAGE LOADER
   border-radius: 10px;
 }
 
-@media (max-width:675px)
-{
+@media (max-width: 675px) {
   #page-loader {
     background-color: rgba(0, 0, 0, 0.7);
   }
